# feltstate

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: companion.py  dreaming.py  quickstart.py  vheart_source.py  with_llm.py
feltstate/: __init__.py  config.py  dream.py  engine.py  sleep.py  state.py
feltstate/affect/: __init__.py  imprint.py  pressure.py  relationship.py  smooth.py  tide.py  traits.py
feltstate/companion/: __init__.py  app.py  backend.py  backends_ref.py  dispatch.py  express.py  frontend.py  gates.py  presence.py  round.py  scheduler.py  sources_ref.py  topics.py  voice.py
feltstate/memory/: __init__.py  canon.py  context.py  extract.py  feeling.py  skill.py
feltstate/render/: __init__.py  agent.py  felt.py  inject.py
feltstate/sources/: __init__.py  base.py  keyword.py  llm.py  vheart.py
feltstate/timeawareness/: __init__.py  relative_time.py
tests/: test_anticipation.py  test_canon.py  test_companion_app.py  test_context.py  test_dream.py  test_engine.py  test_express.py  test_extract.py  test_gapfill.py  test_imprint.py  test_inject.py  test_keyword_source.py  test_llm_source.py  test_pressure.py  test_relationship.py  test_render.py  test_render_agent.py  test_round.py  test_scheduler.py  test_skill_region.py  test_sleep.py  test_smooth.py  test_state.py  test_tide.py  test_time.py  test_topics.py  test_traits_decay.py  test_vheart_source.py
