[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feltstate"
version = "0.1.0"
description = "Give an LLM agent a felt inner life it experiences as its own: ground-truth affect state, decaying memory, and cache-safe identity-merge injection."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["llm", "agent", "affective-computing", "emotion", "memory", "ai-companion", "appraisal"]
authors = [{ name = "Larry Wang", email = "kaishuiji@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The core (engine, pressure, traits, memory, time, render, KeywordSource) is
# pure standard library — pull and run, no install-time dependencies.
dependencies = []

[project.optional-dependencies]
# LLMSource talks to any OpenAI-compatible endpoint over stdlib urllib, so it
# needs nothing extra either; this extra is just dev tooling.
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/Morephine/feltstate"
Source = "https://github.com/Morephine/feltstate"

[tool.hatch.build.targets.wheel]
packages = ["feltstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 (line length) is not enforced: prose in docstrings is allowed to run long,
# and the formatter wraps code. Everything else is on.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Examples insert the repo root on sys.path so they run uninstalled
# (`python examples/foo.py`); that pushes the feltstate import below the
# sys.path line, which E402 would otherwise flag.
"examples/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["feltstate"]
